syntax = "proto3";

package nova.realtime_chat.v1;

// RealtimeChat Service - WebSocket messaging and E2EE
service RealtimeChatService {
  // Create a 1:1 or group conversation
  rpc CreateConversation(CreateConversationRequest) returns (Conversation);

  // List conversations for a user
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);

  // List messages in a conversation
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

  // Send a message (text, media, location, etc.)
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  // Get conversation details
  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse);

  // Get message history
  rpc GetMessageHistory(GetMessageHistoryRequest) returns (GetMessageHistoryResponse);

  // Stream real-time messages (WebSocket alternative for gRPC clients)
  rpc StreamMessages(StreamMessagesRequest) returns (stream MessageEvent);

  // E2EE: Exchange public keys
  rpc ExchangeKeys(ExchangeKeysRequest) returns (ExchangeKeysResponse);

  // E2EE: Get user's public key
  rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse);

  // Typing indicators
  rpc SendTypingIndicator(TypingIndicatorRequest) returns (TypingIndicatorResponse);

  // Call signaling
  rpc StartCall(StartCallRequest) returns (StartCallResponse);
  rpc EndCall(EndCallRequest) returns (EndCallResponse);
  rpc UpdateCallStatus(UpdateCallStatusRequest) returns (UpdateCallStatusResponse);
}

message CreateConversationRequest {
  string name = 1;
  ConversationType conversation_type = 2;
  repeated string participant_ids = 3;
}

message ListConversationsRequest {
  string user_id = 1;
  int32 limit = 2;
  string cursor = 3;
}

message ListConversationsResponse {
  repeated Conversation conversations = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetMessagesRequest {
  string conversation_id = 1;
  int32 limit = 2;
  string before_message_id = 3;
  string user_id = 4;
}

message GetMessagesResponse {
  repeated Message messages = 1;
  bool has_more = 2;
}

// Message Types
message SendMessageRequest {
  string conversation_id = 1;
  string content = 2;
  MessageType message_type = 3;
  string media_url = 4;
  LocationData location = 5;
  string encrypted_content = 6;  // E2EE encrypted payload
  string ephemeral_public_key = 7;  // E2EE ephemeral key
  string reply_to_message_id = 8;
  string sender_id = 9; // UUID of sender (for membership + auth)
}

message SendMessageResponse {
  string message_id = 1;
  int64 timestamp = 2;
  string status = 3;
  Message message = 4; // Optional full message payload (backward compatible)
}

message GetConversationRequest {
  string conversation_id = 1;
  string user_id = 2;
}

message GetConversationResponse {
  Conversation conversation = 1;
}

message GetMessageHistoryRequest {
  string conversation_id = 1;
  int32 limit = 2;
  string before_message_id = 3;
  string user_id = 4; // Required for membership validation (gateway should inject)
}

message GetMessageHistoryResponse {
  repeated Message messages = 1;
  bool has_more = 2;
}

message StreamMessagesRequest {
  string user_id = 1;
}

message MessageEvent {
  string event_type = 1;  // "message", "typing", "read", "delivered"
  Message message = 2;
  TypingIndicator typing = 3;
  string conversation_id = 4;
}

// E2EE Key Exchange
message ExchangeKeysRequest {
  string user_id = 1;
  string public_key = 2;
  string device_id = 3;
}

message ExchangeKeysResponse {
  string key_id = 1;
  int64 created_at = 2;
}

message GetPublicKeyRequest {
  string user_id = 1;
  string device_id = 2;
}

message GetPublicKeyResponse {
  string public_key = 1;
  string key_id = 2;
  int64 created_at = 3;
}

// Typing Indicators
message TypingIndicatorRequest {
  string conversation_id = 1;
  string user_id = 2;
  bool is_typing = 3;
}

message TypingIndicatorResponse {
  bool success = 1;
}

// Call Signaling
message StartCallRequest {
  string conversation_id = 1;
  CallType call_type = 2;
  string initiator_user_id = 3;
}

message StartCallResponse {
  string call_id = 1;
  int64 started_at = 2;
}

message EndCallRequest {
  string call_id = 1;
  string user_id = 2;
}

message EndCallResponse {
  bool success = 1;
  int64 ended_at = 2;
  int64 duration_seconds = 3;
}

message UpdateCallStatusRequest {
  string call_id = 1;
  string user_id = 2;
  CallStatus status = 3;
}

message UpdateCallStatusResponse {
  bool success = 1;
}

// Data Models
message Message {
  string id = 1;
  string conversation_id = 2;
  string sender_id = 3;
  string content = 4;
  MessageType message_type = 5;
  string media_url = 6;
  LocationData location = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
  string status = 10;
  string encrypted_content = 11;
  string ephemeral_public_key = 12;
  string reply_to_message_id = 13;
  int64 sequence_number = 14; // Monotonic per-conversation ordering
  int64 edited_at = 15;       // 0 if not edited
  int64 deleted_at = 16;      // 0 if not deleted
  int64 recalled_at = 17;     // 0 if not recalled
  int32 version_number = 18;  // Optimistic locking for edits
  int32 reaction_count = 19;
  string idempotency_key = 20;
}

message Conversation {
  string id = 1;
  string name = 2;
  ConversationType conversation_type = 3;
  repeated string participant_ids = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  Message last_message = 7;
}

message LocationData {
  double latitude = 1;
  double longitude = 2;
  string address = 3;
}

message TypingIndicator {
  string user_id = 1;
  string conversation_id = 2;
  bool is_typing = 3;
  int64 timestamp = 4;
}

// Enums
enum MessageType {
  MESSAGE_TYPE_TEXT = 0;
  MESSAGE_TYPE_IMAGE = 1;
  MESSAGE_TYPE_VIDEO = 2;
  MESSAGE_TYPE_AUDIO = 3;
  MESSAGE_TYPE_FILE = 4;
  MESSAGE_TYPE_LOCATION = 5;
  MESSAGE_TYPE_CALL = 6;
}

enum ConversationType {
  CONVERSATION_TYPE_DIRECT = 0;
  CONVERSATION_TYPE_GROUP = 1;
}

enum CallType {
  CALL_TYPE_VOICE = 0;
  CALL_TYPE_VIDEO = 1;
}

enum CallStatus {
  CALL_STATUS_RINGING = 0;
  CALL_STATUS_ACCEPTED = 1;
  CALL_STATUS_DECLINED = 2;
  CALL_STATUS_ENDED = 3;
  CALL_STATUS_MISSED = 4;
}
